# deteccao-alagamento

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  kustomization.yaml  pyproject.toml
.github/workflows/: deploy.yaml
.kubernetes/: deployment.yaml  ingress.yaml  service.yaml
app/: Home.py  api.py  main.py  model.py  📣 Alagamentos em Tempo Real.py  📣 Home.py  📣 Real-time flooding detection.py  📣_Home.py
app/hide/: Experimente o Modelo_Vision AI.py  Pontos Críticos em Tempo Real.py  Pontos de Alagamento_Vision AI.py  🗺️ Pontos Críticos em Tempo Real.py
app/pages/: Classificador de Labels.py  Experimente o Modelo_Vision AI.py  Onde está Chovendo Agora.py  Visualizar Prompt.py  📷 Pontos de Alagamento | Vision AI.py  🗺️ Mapa de Alagamento    | Vision AI.py  🗺️ Pontos Críticos em Tempo Real.py  🧪 Experimente o Modelo  | Vision AI.py  🧪 Experimente o Modelo.py  🧪 Try it out.py
app/utils/: api.py  utils.py
data/: cameras_h3_1.csv
data/database/: pontos_criticos.csv
data/temp/: mock_api_data.json
